@@ -37,9 +37,16 @@
 
 <p>2021-06-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
-* magick/memory.c (_MagickReallocateResourceLimitedMemory): Round
+<p>* coders/msl.c (MSLStartElement): Use resource-managed memory
+allocator for msl_info-&gt;group_info and assure that memory is
+cleared so that empty group does not result in use of
+uninitialized data.  Addresses oss-fuzz 34869
+&quot;graphicsmagick:coder_MSL_fuzzer: Use-of-uninitialized-value in
+MSLEndElement&quot;.</p>
+<p>* magick/memory.c (_MagickReallocateResourceLimitedMemory): Round
 up allocation size on small reallocs in order to lessen the number
-of actual reallocs.</blockquote>
+of actual reallocs.</p>
+</blockquote>
 <p>2021-05-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* coders/svg.c (SVGComment): Re-implement comment callback to be based on
